# opengl_learn

./: CMakeLists.txt  main.cpp
res/: fragment
res/shaders/: fragment  vertex
src/: .main.cpp.swp  main.cpp
src/renderer/: .shader_program.cpp.swp  .shader_program.h.swp  ShaderProgram.cpp  ShaderProgram.h  Texture2D.cpp  Texture2D.h  shader_program.cpp  shader_program.h
src/resources/: ResourceManager.cpp  ResourceManager.h
